:sparkles: Refactor code and fix typos in documentation
Code was refactored to use string formatting instead of string concatenation and to make use of a constant for icon path. Typos and incorrect information in the README file and the 'manifest.json' file were also corrected.

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "required_api_version": "^2.0.0",
     "name": "GitLab",
-    "description": "Quckly access your GitLab Projects and more.",
+    "description": "Quickly access your GitLab Projects and more.",
     "developer_name": "Bruno Paz",
     "icon": "images/icon.png",
     "options": {
